tests/kiama/negative/name_errors/L1/5_var3.ob
MODULE varname;

VAR
    avar3 : INTEGER;
    avar3 : BOOLEAN;

END varname.
